# 2neo2finch

./: Cargo.toml  README.md  index.html
.github/workflows/: build.yml  main.yml
assets/: style.css
assets/scss/: container.scss  header.scss  lds-heart.scss  repo.scss  style.scss
src/: header.rs  loader.rs  main.rs  repository.rs
